# misconfiguration-helper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml  docker-build.yml  lint.yml
docs/: architecture.md  backup.md  build.md  concepts.md  deployment.md  generate_docs.md  index.md  linting.md  update.md  usage.md
docs/api/: overview.md
docs/api/core/: config.md  state.md  utils.md
docs/api/scanners/: acao.md  base.md  fuzz.md  ports.md
docs/scripts/: Procfile  cleanup-state.sh  mch-prod-scan.sh  run-dev-checks.sh  setup-dev.sh
docs/stylesheets/: extra.css
kubernetes/: cronjob.yaml
mch/: __init__.py  cli.py  config.py  prompt.py  state.py  utils.py
mch/scanners/: __init__.py  acao.py  acao_leak.py  acao_usability.py  acao_weak.py  base.py  fuzz.py  ports.py
scripts/: deploy.sh
terraform/: main.tf
tests/: __init__.py  test_acao.py  test_cli.py  test_config.py  test_fuzz.py  test_ports.py  test_ports_scanner.py  test_prompt.py  test_state.py  test_utils.py
