[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mch"
version = "0.0.1"
dependencies = [
    "typer",
    "httpx",
    "tomli",
    "tomli-w",
    "desktop-notifier",
    "rich",
    "platformdirs",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
	"pytest-asyncio",
	"pytest-mock"
]

[project.scripts]
mch = "mch.cli:main"

[tool.setuptools.package-data]
mch = ["wordlists/*"]
